--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/DetailsServer.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/DetailsServer.cshtml
@@ -90,7 +90,7 @@
                         </div>
 
                         <div class="item form-group">
-                            
+
                             @Html.LabelFor(model => model.number_of_cpus, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                             <div class="col-md-3 col-sm-3 ">
                                 @Html.EditorFor(model => model.number_of_cpus, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
@@ -99,14 +99,14 @@
                             <div class="col-md-3 col-sm-3">
                                 @Html.EditorFor(model => model.processor, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                             </div>
-                             @Html.LabelFor(model => model.mac_lan, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            @Html.LabelFor(model => model.mac_lan, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                             <div class="col-md-3 col-sm-3 ">
                                 @Html.EditorFor(model => model.mac_lan, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                             </div>
                         </div>
 
                         <div class="item form-group">
-                           
+
                             @Html.LabelFor(model => model.mac_wlan, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                             <div class="col-md-3 col-sm-3 ">
                                 @Html.EditorFor(model => model.mac_wlan, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
@@ -139,7 +139,7 @@
                                     </label>
                                     <div class="col-md-2">
                                         <input style="text-align:right" type="number" min="0" step="1" max="2147483647" name="IT_inventory_hard_drives[@contador].total_drive_space_mb" id="IT_inventory_hard_drives[@contador].total_drive_space_mb" class="drive-total form-control col-md-12" value="@item.total_drive_space_mb" autocomplete="off" readonly>
-                                    </div>                                  
+                                    </div>
                                     <label class="control-label col-md-1" for="IT_inventory_hard_drives[@contador].type_drive">
                                         <span class="float-right">Type</span>
                                     </label>
@@ -170,7 +170,7 @@
                             @Html.LabelFor(model => model.TotalDiskSpace, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                             <div class="col-md-1 col-sm-1 ">
                                 <input id="TotalDiskSpace" class="form-control" value="@Model.TotalDiskSpace" readonly />
-                            </div>                            
+                            </div>
                         </div>
 
                         <div class="ln_solid"></div>
@@ -183,9 +183,9 @@
                             <div class="col-md-1 col-sm-1 ">
                                 @Html.EditorFor(model => model.maintenance_period_months, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.maintenance_period_months, "", new { @class = "text-danger" })
-                            </div>                           
+                            </div>
                         </div>
-                        
+
                         <div class="ln_solid"></div>
                         <div class="form-group row">
                             <span style="color:black"><b>WARRANTY</b></span>
@@ -208,7 +208,7 @@
                         </div>
 
                         <div class="item form-group">
-                           
+
                             @Html.LabelFor(model => model.active, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                             <div class="col-md-1 col-sm-1 " @*rel="tooltip" data-title="Autorizar"*@>
 
@@ -259,7 +259,10 @@
     <!-- iCheck -->
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
-    <script>
+    <!-- input mask -->
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/inputmask/inputmask.extensions.js"))
+<script>
         $(document).ready(function () {
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
@@ -274,13 +277,18 @@
                 increaseArea: '20%' // optional
             });
 
+                        //inicializa input mask
+             $('#@Html.IdFor(model => model.total_physical_memory_mb)').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' MB', 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true  });
+             $('#@Html.IdFor(model => model.mac_wlan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+             $('#@Html.IdFor(model => model.mac_lan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+
 
         });
 
-       
+
         window.onload = function () {
             clicMenu(1);
         }
-    </script>
+</script>
 }
 
