--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/CreateRadio.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/CreateRadio.cshtml
@@ -62,7 +62,7 @@
                                     @Html.DropDownList("id_planta", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                     @Html.ValidationMessageFor(model => model.id_planta, "", new { @class = "text-danger" })
                                 </div>
-                                                           
+
                             </div>
 
                             <div class="item form-group">
@@ -81,17 +81,17 @@
                                     @Html.EditorFor(model => model.serial_number, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.serial_number, "", new { @class = "text-danger" })
                                 </div>
-                            </div>                            
+                            </div>
                             <div class="ln_solid"></div>
                             <div class="form-group row">
                                 <span style="color:black"><b>WARRANTY</b></span>
                             </div>
                             <div class="item form-group">
-                               @Html.LabelFor(model => model.purchase_date, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                @Html.LabelFor(model => model.purchase_date, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.EditorFor(model => model.purchase_date, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.purchase_date, "", new { @class = "text-danger" })
-                                </div>   
+                                </div>
                                 @Html.LabelFor(model => model.end_warranty, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.EditorFor(model => model.end_warranty, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -104,7 +104,7 @@
                                 <span style="color:black"><b>STATUS</b></span>
                             </div>
 
-                            <div class="item form-group">                               
+                            <div class="item form-group">
                                 @Html.LabelFor(model => model.active, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-1 col-sm-1 " @*rel="tooltip" data-title="Autorizar"*@>
 
@@ -160,7 +160,11 @@
     <!-- iCheck -->
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
-    <script>
+
+    <!-- input mask -->
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/inputmask/inputmask.extensions.js"))
+<script>
         $(document).ready(function () {
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
@@ -185,6 +189,12 @@
                 verificaCombos();
             });
 
+                        //inicializa input mask
+             $('#@Html.IdFor(model => model.total_physical_memory_mb)').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' MB', 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true  });
+             $('#@Html.IdFor(model => model.mac_wlan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+             $('#@Html.IdFor(model => model.mac_lan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+
+
             verificaCombos();
 
         });
@@ -192,10 +202,10 @@
 
 
         function verificaCombos() {
-           
+
             //check
             if (!$('#active').prop('checked')) {
-                $('#inactive_date').prop('disabled', false);              
+                $('#inactive_date').prop('disabled', false);
 
                 // Initialize Select2 Elements (debe ir después de asignar el valor)
                 $('.select2bs4').select2({
@@ -203,7 +213,7 @@
                 })
 
             } else { //si el check está seleccionado
-                $('#inactive_date').prop('disabled', true);                
+                $('#inactive_date').prop('disabled', true);
                 //$('#inactive_date').val('');
             }
 
@@ -212,6 +222,6 @@
         window.onload = function () {
             clicMenu(1);
         }
-    </script>
+</script>
 }
 
