--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/CreateSmartphone.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/CreateSmartphone.cshtml
@@ -61,14 +61,14 @@
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.DropDownList("id_planta", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                     @Html.ValidationMessageFor(model => model.id_planta, "", new { @class = "text-danger" })
-                                </div>                             
-                              
+                                </div>
+
                             </div>
 
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.brand, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
-                                    @Html.EditorFor(model => model.brand, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @required ="required" } })
+                                    @Html.EditorFor(model => model.brand, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @required = "required" } })
                                     @Html.ValidationMessageFor(model => model.brand, "", new { @class = "text-danger" })
                                 </div>
                                 @Html.LabelFor(model => model.model, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
@@ -119,8 +119,8 @@
                                     @Html.ValidationMessageFor(model => model.imei_1, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                            <div class="item form-group">                              
-                                
+                            <div class="item form-group">
+
                                 @Html.LabelFor(model => model.imei_2, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.EditorFor(model => model.imei_2, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -129,7 +129,7 @@
 
                             </div>
 
-                           
+
                             <div class="ln_solid"></div>
                             <div class="form-group row">
                                 <span style="color:black"><b>WARRANTY</b></span>
@@ -153,7 +153,7 @@
                             </div>
 
                             <div class="item form-group">
-                      
+
                                 @Html.LabelFor(model => model.active, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-1 col-sm-1 " @*rel="tooltip" data-title="Autorizar"*@>
 
@@ -209,7 +209,10 @@
     <!-- iCheck -->
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
-    <script>
+    <!-- input mask -->
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/inputmask/inputmask.extensions.js"))
+<script>
         $(document).ready(function () {
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
@@ -225,7 +228,7 @@
             });
 
 
-           
+
             //eventos input
             $('input').on('ifChecked', function (event) {
                 verificaCombos();
@@ -235,17 +238,23 @@
                 verificaCombos();
             });
 
+                        //inicializa input mask
+             $('#@Html.IdFor(model => model.total_physical_memory_mb)').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' MB', 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true  });
+             $('#@Html.IdFor(model => model.mac_wlan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+             $('#@Html.IdFor(model => model.mac_lan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+
+
             verificaCombos();
 
         });
 
 
 
-        function verificaCombos() {          
+        function verificaCombos() {
 
             //check
             if (!$('#active').prop('checked')) {
-                $('#inactive_date').prop('disabled', false);                
+                $('#inactive_date').prop('disabled', false);
 
                 // Initialize Select2 Elements (debe ir después de asignar el valor)
                 $('.select2bs4').select2({
@@ -253,7 +262,7 @@
                 })
 
             } else { //si el check está seleccionado
-                $('#inactive_date').prop('disabled', true);              
+                $('#inactive_date').prop('disabled', true);
                 //$('#inactive_date').val('');
             }
 
@@ -262,6 +271,6 @@
         window.onload = function () {
             clicMenu(1);
         }
-    </script>
+</script>
 }
 
