--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/DetailsSmartphone.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/DetailsSmartphone.cshtml
@@ -53,7 +53,7 @@
                             @Html.LabelFor(model => model.id_planta, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                             <div class="col-md-3 col-sm-3 ">
                                 <input class="form-control" value="@Model.plantas.descripcion" readonly="readonly" />
-                            </div>                          
+                            </div>
                         </div>
 
                         <div class="item form-group">
@@ -106,7 +106,7 @@
                                 @Html.EditorFor(model => model.imei_2, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                             </div>
                         </div>
-                       
+
                         <div class="ln_solid"></div>
                         <div class="form-group row">
                             <span style="color:black"><b>WARRANTY</b></span>
@@ -128,7 +128,7 @@
                             <span style="color:black"><b>STATUS</b></span>
                         </div>
 
-                        <div class="item form-group">                          
+                        <div class="item form-group">
                             @Html.LabelFor(model => model.active, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                             <div class="col-md-1 col-sm-1 " @*rel="tooltip" data-title="Autorizar"*@>
 
@@ -179,7 +179,10 @@
     <!-- iCheck -->
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
-    <script>
+    <!-- input mask -->
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/inputmask/inputmask.extensions.js"))
+<script>
         $(document).ready(function () {
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
@@ -194,6 +197,12 @@
                 increaseArea: '20%' // optional
             });
 
+                        //inicializa input mask
+             $('#@Html.IdFor(model => model.total_physical_memory_mb)').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' MB', 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true  });
+             $('#@Html.IdFor(model => model.mac_wlan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+             $('#@Html.IdFor(model => model.mac_lan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+
+
 
         });
 
@@ -201,6 +210,6 @@
         window.onload = function () {
             clicMenu(1);
         }
-    </script>
+</script>
 }
 
