--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/EditAP.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/EditAP.cshtml
@@ -24,6 +24,7 @@
     <!-- Select2 -->
     <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
+
 }
 
 <div class="right_col" role="main">
@@ -105,7 +106,7 @@
                                     @Html.ValidationMessageFor(model => model.serial_number, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                            <div class="item form-group">                               
+                            <div class="item form-group">
                                 @Html.LabelFor(model => model.mac_lan, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.EditorFor(model => model.mac_lan, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -116,12 +117,12 @@
                                     @Html.EditorFor(model => model.mac_wlan, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.mac_wlan, "", new { @class = "text-danger" })
                                 </div>
-                                 @Html.LabelFor(model => model.ip_adress, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                @Html.LabelFor(model => model.ip_adress, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.EditorFor(model => model.ip_adress, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.purchase_date, "", new { @class = "text-danger" })
                                 </div>
-                            </div>                      
+                            </div>
 
                             <div class="ln_solid"></div>
                             <div class="form-group row">
@@ -146,7 +147,7 @@
                             </div>
 
                             <div class="item form-group">
-                                
+
                                 @Html.LabelFor(model => model.active, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-1 col-sm-1 " @*rel="tooltip" data-title="Autorizar"*@>
 
@@ -202,7 +203,10 @@
     <!-- iCheck -->
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
-    <script>
+    <!-- input mask -->
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/inputmask/inputmask.extensions.js"))
+<script>
         $(document).ready(function () {
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
@@ -222,23 +226,29 @@
                 verificaCombos();
             });
 
+             //inicializa input mask
+            $('#@Html.IdFor(model => model.total_physical_memory_mb)').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' MB', 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true  });
+            $('#@Html.IdFor(model => model.mac_wlan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+            $('#@Html.IdFor(model => model.mac_lan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+
+
             $('input').on('ifUnchecked', function (event) {
                 verificaCombos();
             });
 
-            
+
 
             verificaCombos();
 
         });
 
-      
+
 
         function verificaCombos() {
-           
+
             //check
             if (!$('#active').prop('checked')) {
-                $('#inactive_date').prop('disabled', false);             
+                $('#inactive_date').prop('disabled', false);
 
                 // Initialize Select2 Elements (debe ir después de asignar el valor)
                 $('.select2bs4').select2({
@@ -255,6 +265,6 @@
         window.onload = function () {
             clicMenu(1);
         }
-    </script>
+</script>
 }
 
