--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/EditServer.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/EditServer.cshtml
@@ -115,14 +115,14 @@
                                     @Html.DropDownList("bits_operation_system", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                     @Html.ValidationMessageFor(model => model.bits_operation_system, "", new { @class = "text-danger" })
                                 </div>
-                                 @Html.LabelFor(model => model.cpu_speed_mhz, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                @Html.LabelFor(model => model.cpu_speed_mhz, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.EditorFor(model => model.cpu_speed_mhz, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.cpu_speed_mhz, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
-                            <div class="item form-group">                               
+                            <div class="item form-group">
                                 @Html.LabelFor(model => model.number_of_cpus, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.EditorFor(model => model.number_of_cpus, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -140,7 +140,7 @@
                                 </div>
                             </div>
 
-                            <div class="item form-group">                                
+                            <div class="item form-group">
                                 @Html.LabelFor(model => model.mac_wlan, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.EditorFor(model => model.mac_wlan, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -181,7 +181,7 @@
                                             <span class="float-right">Type</span>
                                         </label>
                                         <div class="col-md-2">
-                                            <select name="IT_inventory_hard_drives[@contador].type_drive" id="IT_inventory_hard_drives[@contador].type_drive" class="categoria form-control select2bs4" style="width:100%" >
+                                            <select name="IT_inventory_hard_drives[@contador].type_drive" id="IT_inventory_hard_drives[@contador].type_drive" class="categoria form-control select2bs4" style="width:100%">
                                                 <option value=''>-- Seleccione un valor --</option>
                                                 <option value='SSD' @(item.type_drive == "SSD" ? "selected" : "")>SSD</option>
                                                 <option value='HDD' @(item.type_drive == "HDD" ? "selected" : "")>HDD</option>
@@ -228,14 +228,14 @@
                                 <div class="col-md-1 col-sm-1 ">
                                     @Html.EditorFor(model => model.maintenance_period_months, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.maintenance_period_months, "", new { @class = "text-danger" })
-                                </div>                               
-                            </div>                           
+                                </div>
+                            </div>
                             <div class="ln_solid"></div>
                             <div class="form-group row">
                                 <span style="color:black"><b>WARRANTY</b></span>
                             </div>
                             <div class="item form-group">
-                               @Html.LabelFor(model => model.purchase_date, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                @Html.LabelFor(model => model.purchase_date, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.EditorFor(model => model.purchase_date, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.purchase_date, "", new { @class = "text-danger" })
@@ -252,7 +252,7 @@
                                 <span style="color:black"><b>STATUS</b></span>
                             </div>
 
-                            <div class="item form-group">                               
+                            <div class="item form-group">
                                 @Html.LabelFor(model => model.active, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-1 col-sm-1 " @*rel="tooltip" data-title="Autorizar"*@>
 
@@ -308,7 +308,10 @@
     <!-- iCheck -->
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
-    <script>
+    <!-- input mask -->
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
+    @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/inputmask/inputmask.extensions.js"))
+<script>
         $(document).ready(function () {
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
@@ -335,6 +338,12 @@
 
             //agrega eventos a los input
             asignaEventosInput();
+
+                        //inicializa input mask
+             $('#@Html.IdFor(model => model.total_physical_memory_mb)').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' MB', 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true  });
+             $('#@Html.IdFor(model => model.mac_wlan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+             $('#@Html.IdFor(model => model.mac_lan)').inputmask({ 'alias': "mac", 'autoUnmask': true, 'removeMaskOnSubmit': true });
+
 
             verificaCombos();
 
@@ -389,10 +398,10 @@
 
 
         function verificaCombos() {
-           
+
             //check
             if (!$('#active').prop('checked')) {
-                $('#inactive_date').prop('disabled', false);                
+                $('#inactive_date').prop('disabled', false);
 
                 // Initialize Select2 Elements (debe ir después de asignar el valor)
                 $('.select2bs4').select2({
@@ -400,7 +409,7 @@
                 })
 
             } else { //si el check está seleccionado
-                $('#inactive_date').prop('disabled', true);               
+                $('#inactive_date').prop('disabled', true);
                 //$('#inactive_date').val('');
             }
 
@@ -420,38 +429,38 @@
             $("#div_drives").append(
 
                 `
-                                            <div class="form-group row" id="div_drives_`+ num + `">
-                                                                    <label class="control-label col-md-1" for="IT_inventory_hard_drives[`+ num + `].disk_name">
-                                                                        <span class="float-right">Drive Letter</span>
-                                                                    </label>
-                                                                    <div class="col-md-1">
-                                                                        <input style="text-align:right" type="text" maxlength="1" style="text-transform: uppercase; text-align: right" onkeyup="javascript:this.value=this.value.toUpperCase();"  onkeyup="javascript:this.value=this.value.toUpperCase();" name="IT_inventory_hard_drives[`+ num + `].disk_name" id="IT_inventory_hard_drives[` + num + `].disk_name" class="form-control col-md-12" value="" autocomplete="off" required>
-                                                                        <span class="field-validation-valid text-danger" data-valmsg-for="IT_inventory_hard_drives[`+ num + `].disk_name" data-valmsg-replace="true"></span>
+                                                <div class="form-group row" id="div_drives_`+ num + `">
+                                                                        <label class="control-label col-md-1" for="IT_inventory_hard_drives[`+ num + `].disk_name">
+                                                                            <span class="float-right">Drive Letter</span>
+                                                                        </label>
+                                                                        <div class="col-md-1">
+                                                                            <input style="text-align:right" type="text" maxlength="1" style="text-transform: uppercase; text-align: right" onkeyup="javascript:this.value=this.value.toUpperCase();"  onkeyup="javascript:this.value=this.value.toUpperCase();" name="IT_inventory_hard_drives[`+ num + `].disk_name" id="IT_inventory_hard_drives[` + num + `].disk_name" class="form-control col-md-12" value="" autocomplete="off" required>
+                                                                            <span class="field-validation-valid text-danger" data-valmsg-for="IT_inventory_hard_drives[`+ num + `].disk_name" data-valmsg-replace="true"></span>
+                                                                        </div>
+                                                                        <label class="control-label col-md-1" for="IT_inventory_hard_drives[`+ num + `].total_drive_space_mb">
+                                                                            <span class="float-right">Total Drive Space (MB)</span>
+                                                                        </label>
+                                                                        <div class="col-md-2">
+                                                                            <input style="text-align:right" type="number" min="0" step="1" max="2147483647" name="IT_inventory_hard_drives[`+ num + `].total_drive_space_mb" id="IT_inventory_hard_drives[` + num + `].total_drive_space_mb" class="drive-total form-control col-md-12" value="" autocomplete="off" required>
+                                                                            <span class="field-validation-valid text-danger" data-valmsg-for="IT_inventory_hard_drives[`+ num + `].total_drive_space_mb" data-valmsg-replace="true"></span>
+                                                                        </div>
+                                                                        <label class="control-label col-md-1" for="IT_inventory_hard_drives[`+ num + `].type_drive">
+                                                                            <span class="float-right">Type</span>
+                                                                        </label>
+                                                                        <div class="col-md-2">
+                                                                            <select name="IT_inventory_hard_drives[`+ num + `].type_drive" id="IT_inventory_hard_drives[` + num + `].type_drive" class="categoria form-control select2bs4" style="width:100%" >
+                                                                                <option value=''>-- Seleccione un valor --</option>
+                                                                                <option value='SSD'>SSD</option>
+                                                                                <option value='HDD'>HDD</option>
+                                                                                <option value='M.2'>M.2</option>
+                                                                            </select>
+                                                                            <span class="field-validation-valid text-danger" data-valmsg-for="IT_inventory_hard_drives[`+ num + `].type_drive" data-valmsg-replace="true"></span>
+                                                                        </div>
+                                                                        <div class="col-md-1">
+                                                                            <input type="button" value="Borrar" class="btn btn-danger" onclick="borrarPieza(`+ num + `); return false;">
+                                                                        </div>
                                                                     </div>
-                                                                    <label class="control-label col-md-1" for="IT_inventory_hard_drives[`+ num + `].total_drive_space_mb">
-                                                                        <span class="float-right">Total Drive Space (MB)</span>
-                                                                    </label>
-                                                                    <div class="col-md-2">
-                                                                        <input style="text-align:right" type="number" min="0" step="1" max="2147483647" name="IT_inventory_hard_drives[`+ num + `].total_drive_space_mb" id="IT_inventory_hard_drives[` + num + `].total_drive_space_mb" class="drive-total form-control col-md-12" value="" autocomplete="off" required>
-                                                                        <span class="field-validation-valid text-danger" data-valmsg-for="IT_inventory_hard_drives[`+ num + `].total_drive_space_mb" data-valmsg-replace="true"></span>
-                                                                    </div>
-                                                                    <label class="control-label col-md-1" for="IT_inventory_hard_drives[`+ num + `].type_drive">
-                                                                        <span class="float-right">Type</span>
-                                                                    </label>
-                                                                    <div class="col-md-2">
-                                                                        <select name="IT_inventory_hard_drives[`+ num + `].type_drive" id="IT_inventory_hard_drives[` + num + `].type_drive" class="categoria form-control select2bs4" style="width:100%" >
-                                                                            <option value=''>-- Seleccione un valor --</option>
-                                                                            <option value='SSD'>SSD</option>
-                                                                            <option value='HDD'>HDD</option>
-                                                                            <option value='M.2'>M.2</option>
-                                                                        </select>
-                                                                        <span class="field-validation-valid text-danger" data-valmsg-for="IT_inventory_hard_drives[`+ num + `].type_drive" data-valmsg-replace="true"></span>
-                                                                    </div>
-                                                                    <div class="col-md-1">
-                                                                        <input type="button" value="Borrar" class="btn btn-danger" onclick="borrarPieza(`+ num + `); return false;">
-                                                                    </div>
-                                                                </div>
-                                            `
+                                                `
             );
             $("#div_drives_" + num).hide().fadeIn(500);
 
@@ -480,6 +489,6 @@
         window.onload = function () {
             clicMenu(1);
         }
-    </script>
+</script>
 }
 
